--- a/Aula01/trabalhando_com_html/css/styles.css
+++ b/Aula01/trabalhando_com_html/css/styles.css
@@ -8,7 +8,8 @@ body {
     color: #333;
 }
 header {
-    background-color: #5424ad;
+    background-color: #1320d4;
+;
     color: #f4f4f4;
     padding: 10px;
     text-align: center;
@@ -32,7 +33,7 @@ footer {
     margin-bottom: 10px;
     text-align: center; /* centraliza o texto  no rodapé */
 padding: 10px;
-background-color: #5424af;
+background-color: #1320d4;
 color: #fff;
 position: fixed;
 bottom: 0;
