--- a/Aula01/trabalhando_com_html/css/styles.css
+++ b/Aula01/trabalhando_com_html/css/styles.css
@@ -1,18 +1,21 @@
 body, ul {
-    margin: 1;
-    padding: 1;
+    margin: 0;
+    padding: 0;
 }
 body {
     font-family: Arial, sans-serif ;
     background-color: #65ade4;
     color: #333;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 50px;
 }
 header {
     background-color: #1320d4;
-;
     color: #f4f4f4;
-    padding: 10px;
+    padding: 20px;
     text-align: center;
+    border-bottom: solid #ccc;
 }
 section {
     width: 80%;
@@ -29,9 +32,7 @@ li{
     margin-bottom: 10px;
 }
 footer {
-    text-align: 10px;
-    margin-bottom: 10px;
-    text-align: center; /* centraliza o texto  no rodapé */
+text-align: center; /* centraliza o texto  no rodapé */
 padding: 10px;
 background-color: #1320d4;
 color: #fff;
