--- a/Aula01/trabalhando_com_html/css/styles.css
+++ b/Aula01/trabalhando_com_html/css/styles.css
@@ -40,3 +40,9 @@ position: fixed;
 bottom: 0;
 width: 100%;
 }
+.foto-perfil {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin: 0 auto;
+}
