--- a/Aula01/trabalhando_com_html/css/styles.css
+++ b/Aula01/trabalhando_com_html/css/styles.css
@@ -1,45 +1,67 @@
+html
+/* Espaçamento da lista ordenada */
+
 body, ul {
-    margin: 0;
+    margin: 5px;
     padding: 0;
 }
+
+/* Definir fonte, espaçamento e cores do corpo da página */
+
 body {
     font-family: Arial, sans-serif ;
-    background-color: #65ade4;
+    background-color: #edcec0;
     color: #333;
     margin: 0;
     padding: 0;
     margin-bottom: 50px;
 }
+
+/* Definir cor de fundo, cor de texto, espaçamento, alinhamento do texto e cor da borda do header */
+
 header {
-    background-color: #1320d4;
+    border-radius: 10px;
+    background-color: #595c85;
     color: #f4f4f4;
-    padding: 20px;
+    padding: 5px;
     text-align: center;
-    border-bottom: solid #ccc;
+    border-bottom: solid #ca94cb;
 }
+
+/* Definir altura, espaçamento, cor de fundo, borda, sombreamento e estilo de lista da section */
 section {
     width: 80%;
     margin: 0 auto;
     background-color: #fff;
-    padding: 20px;
-margin: 10px 0;
-border-radius: 8px;
-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-list-style-type: none;
-padding: 0;
+    padding: 5px;
+    margin: 5px 0;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    list-style-type: none;
+    padding: 0;
 }
+
+/* Definir margem da lista */
+
 li{
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 }
+
+/* Definir alinhamento, espaçamento, cor de fundo, cor do texto e altura do rodapé */
+
 footer {
-text-align: center; /* centraliza o texto  no rodapé */
-padding: 10px;
-background-color: #1320d4;
-color: #fff;
-position: fixed;
-bottom: 0;
-width: 100%;
+    text-align: center; /* centraliza o texto  no rodapé */
+    padding: 5px;
+    background-color: #595c85;
+    color: #fff;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 3%;
 }
+
+/* Definir largura, altura, tipo de borda e margen da class foto-perfil */
+
 .foto-perfil {
     width: 100px;
     height: 100px;
